--- a/08company/index.html
+++ b/08company/index.html
@@ -20,57 +20,57 @@
     <div class="headerWrap">
         <div class="container p-0">
             <nav class="navbar navbar-expand-md navbar-dark py10 px-3 px-lg-0">
-                <a class="navbar-brand" href="#!"><img src="images/logo.png" alt="logo" class="img-fluid logo"></a>
+                <a class="navbar-brand" href="index.html"><img src="images/logo.png" alt="logo" class="img-fluid logo"></a>
                 <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId" aria-controls="collapsibleNavId"
                     aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="collapsibleNavId">
                     <ul class="navbar-nav ml-auto mt-2 mt-lg-0 dep1ul">
-                        <li class="nav-item fz20 px50">
-                            <a class="nav-link dep1 text-white mx-3" href="#!">브랜드</a>
-                            <ul class="dep2ul dep-brand">
-                                <li class="dep2li">
-                                    <a href="#!" class="dep2a mb15">청년다방</a>
+                        <li class="nav-item fz20 px50 dropdown">
+                            <a class="nav-link dep1 text-white mx-3" href="brand01.html">브랜드</a>
+                            <ul class="dep2ul dep-brand dropdown-menu">
+                                <li class="dep2li dropdown-item">
+                                    <a href="brand01.html" class="dep2a mb15">청년다방</a>
                                 </li>
-                                <li class="dep2li">
-                                    <a href="#!" class="dep2a mb15">지표가 되다</a>
+                                <li class="dep2li dropdown-item">
+                                    <a href="brand02.html" class="dep2a mb15">지표가 되다</a>
                                 </li>
-                                <li class="dep2li">
-                                    <a href="#!" class="dep2a mb15">한류 열풍에 동참하다</a>
+                                <li class="dep2li dropdown-item">
+                                    <a href="brand03.html" class="dep2a mb15">한류 열풍에 동참하다</a>
                                 </li>
-                                <li class="dep2li">
-                                    <a href="#!" class="dep2a mb15">인테리어 갤러리</a>
+                                <li class="dep2li dropdown-item">
+                                    <a href="brand04.html" class="dep2a mb15">인테리어 갤러리</a>
                                 </li>
-                                <li class="dep2li">
-                                    <a href="#!" class="dep2a mb15">BI</a>
-                                </li>
-                            </ul>
-                        </li>
-                        <li class="nav-item fz20 px50">
-                            <a class="nav-link dep1 text-white mx-3" href="#!">메뉴안내</a>
-                            <ul class="dep2ul dep-menu">
-                                <li class="dep2li">
-                                    <a href="#!" class="dep2a mb15">메뉴안내</a>
+                                <li class="dep2li dropdown-item">
+                                    <a href="brand05.html" class="dep2a mb15">BI</a>
                                 </li>
                             </ul>
                         </li>
-                        <li class="nav-item fz20 px50">
-                            <a class="nav-link dep1 text-white mx-3" href="#!">매장안내</a>
-                            <ul class="dep2ul dep-store">
-                                <li class="dep2li">
-                                    <a href="#!" class="dep2a mb15">매장안내</a>
+                        <li class="nav-item fz20 px50 dropdown">
+                            <a class="nav-link dep1 text-white mx-3" href="menu01.html">메뉴안내</a>
+                            <ul class="dep2ul dep-menu dropdown-menu">
+                                <li class="dep2li dropdown-item">
+                                    <a href="menu01.html" class="dep2a mb15">메뉴안내</a>
                                 </li>
                             </ul>
                         </li>
-                        <li class="nav-item fz20 px50">
-                            <a class="nav-link dep1 text-white mx-3" href="#!">고객센터</a>
-                            <ul class="dep2ul dep-customer">
-                                <li class="dep2li"><a href="#!" class="dep2a mb15">공지사항</a></li>
-                                <li class="dep2li"><a href="#!" class="dep2a mb15">보도자료</a></li>
-                                <li class="dep2li"><a href="#!" class="dep2a mb15">SNS</a></li>
-                                <li class="dep2li"><a href="#!" class="dep2a mb15">이벤트</a></li>
-                                <li class="dep2li"><a href="#!" class="dep2a mb15">고객센터</a></li>
+                        <li class="nav-item fz20 px50 dropdown">
+                            <a class="nav-link dep1 text-white mx-3" href="store01.html">매장안내</a>
+                            <ul class="dep2ul dep-store dropdown-menu">
+                                <li class="dep2li dropdown-item">
+                                    <a href="store01.html" class="dep2a mb15">매장안내</a>
+                                </li>
+                            </ul>
+                        </li>
+                        <li class="nav-item fz20 px50 dropdown">
+                            <a class="nav-link dep1 text-white mx-3" href="customer01.html">고객센터</a>
+                            <ul class="dep2ul dep-customer dropdown-menu">
+                                <li class="dep2li dropdown-item"><a href="customer01.html" class="dep2a mb15">공지사항</a></li>
+                                <li class="dep2li dropdown-item"><a href="customer02.html" class="dep2a mb15">보도자료</a></li>
+                                <li class="dep2li dropdown-item"><a href="customer03.html" class="dep2a mb15">SNS</a></li>
+                                <li class="dep2li dropdown-item"><a href="customer04.html" class="dep2a mb15">이벤트</a></li>
+                                <li class="dep2li dropdown-item"><a href="customer05.html" class="dep2a mb15">고객센터</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -237,7 +237,7 @@
     <div class="notice px-3 px-md-0 py-5">
         <div class="container px-0 py-5">
             <h2 class="mb-2 bold">Notice</h2>
-            <a href=""><div class="plus">
+            <a href="customer01.html"><div class="plus">
                 <div class="bar01"></div>
                 <div class="bar02"></div>
             </div></a>
@@ -308,7 +308,7 @@
     <div class="menu pt25 py-5 py-lg-0">
         <div class="container">
             <h2 class="mb-2 bold">Menu</h2>
-            <a href=""><div class="plus">
+            <a href="menu01.html"><div class="plus">
                 <div class="bar01"></div>
                 <div class="bar02"></div>
             </div></a>
@@ -393,7 +393,7 @@
                         만나실 수 있도록<br class="d-none d-md-block">  
                         항상 최선을 다하겠습니다.<br class="d-none d-md-block">  
                     </p>
-                    <a href="#!" class="btn btn-primary text-white px-4 mb-5 mb-md-0 d-block d-md-inline">찾아보기</a>
+                    <a href="store01.html" class="btn btn-primary text-white px-4 mb-5 mb-md-0 d-block d-md-inline">찾아보기</a>
                 </div>
                 <div class="col-md-4 mb-4 mb-md-0">
                     <div class="card d-flex flex-row">
@@ -452,7 +452,7 @@
         <div class="container py-5">
             <div class="row px-3 px-md-0">
                 <div class="col-lg-3 mb-3 mb-lg-0">
-                    <a href="#!"><img src="images/pop_inq_tit.png" alt="" class="img-fluid mb-3"></a>
+                    <a href="index.html"><img src="images/pop_inq_tit.png" alt="" class="img-fluid mb-3"></a>
                     <p>
                         Copyright © 청년다방.<br class="d-none d-lg-block">All Rights Reserved.
                     </p>
@@ -460,11 +460,11 @@
                 <div class="col-6 col-lg-3 news mb-3 mb-lg-0">
                     <h4 class="mb-3">Media</h4>
                     <ul>
-                        <li><a href="#!">어쩌다 구멍가게 사장...</a></li>
-                        <li><a href="#!">고양시, 코로나에도...</a></li>
-                        <li><a href="#!">장기표 아내 조무하...</a></li>
-                        <li><a href="#!">고양시, '좋은 일자리'...</a></li>
-                        <li><a href="#!">[Opinion] 젊은 모색 2021...</a></li>
+                        <li><a href="customer02.html">어쩌다 구멍가게 사장...</a></li>
+                        <li><a href="customer02.html">고양시, 코로나에도...</a></li>
+                        <li><a href="customer02.html">장기표 아내 조무하...</a></li>
+                        <li><a href="customer02.html">고양시, '좋은 일자리'...</a></li>
+                        <li><a href="customer02.html">[Opinion] 젊은 모색 2021...</a></li>
                     </ul>
                 </div>
                 <div class="col-6 col-lg-3">
@@ -478,8 +478,8 @@
                 <div class="col col-lg-3">
                     <ul class="ft-sns nav mb-4 justify-content-center">
                         <li class="nav-item px-3"><a href="#!"><i class="fab fa-twitter"></i></a></li>
-                        <li class="nav-item px-3"><a href="#!"><i class="fab fa-facebook-f"></i></a></li>
-                        <li class="nav-item px-3"><a href="#!"><i class="fab fa-instagram"></i></a></li>
+                        <li class="nav-item px-3"><a href="https://www.facebook.com/youngdabang.kr/"><i class="fab fa-facebook-f"></i></a></li>
+                        <li class="nav-item px-3"><a href="https://www.instagram.com/youngdabang_no.1/?hl=ko"><i class="fab fa-instagram"></i></a></li>
                         <li class="nav-item px-3"><a href="#!"><i class="fab fa-youtube"></i></a></li>
                     </ul>
                     <a href="#!" class="btn btn-ft px-4">Family Brand</a>
@@ -498,9 +498,9 @@
         $(window).scroll(function(){
             let scrollY = $(window).scrollTop();
             if(scrollY > 100){
-                $(".navbar").addClass("fixed-top bg-dark px-3 px-lg-5")
+                $(".navbar").addClass("fixed-top bg-dark px-lg-5")
             }else{
-                $(".navbar").removeClass("fixed-top bg-dark px-3 px-lg-5")
+                $(".navbar").removeClass("fixed-top bg-dark px-lg-5")
             }
 
         });
@@ -556,6 +556,7 @@
                     }
                     
                 });
+                $(".dep2ul").show();
             }else{
                 $(".navbar").removeClass("onView");
                 $(".navbar-collapse").removeClass("show");
